crates/diffler/src/ui/diff/snapshots/diffler__ui__diff__cards__tests__a_long_thread_folds_and_splits_into_lanes.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                                                   "
" ▾ src                    +1 -1  modified  src/lib.rs · 1 comment                                            +1 -1 █████"
"▌  ● lib.rs ·1            +1 -1  answer                                                                                 "
" + ci.yml                 +1 -0  @@ -1,3 +1,3 @@                                                                        "
" ○ todo.md                +1 -0     1    1 pub fn answer() -> u32 {                                                     "
"                                  ▌ reviewer · replied                                                                  "
"                                  ▌ why full jitter here?                                                               "
"                                                                                                                        "
"                                    ▸ 3 earlier replies · agent, reviewer                                               "
"                                                                                                                        "
"                                      ▌ agent                                                                           "
"                                      ▌ capped at two seconds                                                           "
"                                      ▌ added a test for attempt zero                                                   "
"                                      ▌ updated the docs                                                                "
"                                      ▌ and the changelog                                                               "
"                                      ▌ and the bench                                                                   "
"                                  ▌                                                                                     "
"                                ▌   2          41                                                                       "
"                                ▌        2     42                                                                       "
"                                    3    3 }                                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/3 files                                                                        "
