crates/diffler/src/ui/diff/snapshots/diffler__ui__diff__cards__tests__a_slide_with_two_comments_renders_both_cards.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" How the answer moved (1)        Diff                                                                                   "
"▌The answer  lib.rs · 2          modified  src/lib.rs · 2 comments                                           +1 -1 █████"
"                                 answer                                                                                 "
"                                 @@ -1,3 +1,3 @@                                                                        "
"                                    1    1 pub fn answer() -> u32 {                                                     "
"                                ▌        2     42                                                                       "
"                                  ▌ reviewer · open                                                                     "
"                                  ▌ why 42 and not 41?                                                                  "
"                                  ▌                                                                                     "
"                                    3    3 }                                                                            "
"                                  ▌ The answer  agent · open                                                            "
"                                  ▌ why 42                                                                              "
"                                  ▌                                                                                     "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/3 files                                                                        "
